# sycl-thrust

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  vector_example.cpp
include/: CMakeLists.txt
include/thrust/: copy.h  device_allocator.h  device_ptr.h  device_reference.h  device_vector.h  execution_policy.h  fill.h
include/thrust/detail/: default_selector.hpp  get_pointer_device.hpp  vector_base.h
test/gtest/: CMakeLists.txt  device_vector_test.cpp  util.hpp
